fix: EditableText and EditableHeading overflowing in the catalog

--- a/packages/core/src/components/EditableTypography/EditableTypography.module.scss
+++ b/packages/core/src/components/EditableTypography/EditableTypography.module.scss
@@ -1,7 +1,7 @@
 @import "~monday-ui-style/dist/mixins";
 
 .editableTypography {
-  display: inline-flex;
+  display: contents;
   min-width: 0;
   max-width: 100%;
   // Shifts the component to align the text with the container
